# python-training

./: README.md  main.py  pyproject.toml
doc/lecture/context-manager/: README.ipynb  README.md  log.txt
doc/lecture/debug-and-logging/: README.md
doc/lecture/decolator/: README.ipynb  README.md
doc/lecture/decolator-and-context-manager/: README.ipynb  README.md
doc/lecture/decorator/: README.ipynb
doc/lecture/for-if-else/: README.ipynb  README.md
doc/lecture/function-class/: README.ipynb  README.md  sample.py
doc/lecture/input-output/: README.md  exercise_answer1_2.py  exercise_answer2_2.py  main_answer.py  main_answer2.py  output.txt
doc/lecture/input-output/inputs/51ade228-0dab-4c56-9937-a2313103945a/: ada30e81-dd9a-43ce-81ab-7c58bca276c8.csv  ea987b9f-8972-446f-939a-1a261397246c.csv
doc/lecture/input-output/inputs/6a9ca85c-8a1e-45e4-9be8-434f766939b5/: a84cd4c1-5760-4f28-9400-705b817df1f7.csv  (+1 more)
doc/lecture/iterator-generator/: README.ipynb  README.md
doc/lecture/iterator-generator-branch/: README.ipynb  README.md
doc/lecture/lambda/: README.ipynb  README.md
doc/lecture/numpy-random/: main.py
doc/lecture/prepare/: README.md
doc/lecture/std-data-type/: README.md  basic.ipynb  basic.md  collections.ipynb  collections.md  datetime.ipynb  datetime.md  exercise1_answer.py  exercise2_answer.py  exercise3_answer.py  exercise3_input.txt  exercise4_answer.py  mutable-and-copy.ipynb  mutable-and-copy.md  str-and-bytes.ipynb  str-and-bytes.md
doc/memo/: application-specification.md  python-study-plan-2022-12-22.md
(+14 files in other folders)
